--- a/tasks/root.yml
+++ b/tasks/root.yml
@@ -1,6 +1,6 @@
 # This file contains tasks related to modifying the root user
 
-- name: identities | root | disable root login
+- name: "identities | root | disable root login"
   become: true
   ansible.builtin.user:
     shell: /usr/sbin/nologin
