fix: subdir creation in home only takes place when vars exist

--- a/tasks/user.yml
+++ b/tasks/user.yml
@@ -90,6 +90,9 @@
       loop: "{{ user.home.dirs }}"
       loop_control:
         loop_var: "dir"
+      when:
+        - user.home is defined
+        - user.home.dirs is defined
   vars:
       path_prefix: "/home/{{ user.name }}/"
       owner: "{{ user.name }}"
